# Purplle-Tech-Challenge-2026

./: .gitignore  CHOICES.md  DESIGN.md  FINAL_REPORT.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements-streamlit.txt  requirements.txt
analytics/: funnel_builder.py  journey_builder.py  pos_parser.py  product_metrics.py  store_metrics.py
dashboard/: app.py
deployments/: docker-compose.yml
docker/: api.Dockerfile  dashboard.Dockerfile  worker.Dockerfile
outputs/: final_validation_report.json
outputs/analytics/: conversion_report.json  final_pos_analytics_report.json  funnel.json  journeys.json  pos_summary.json  product_metrics.json  store_metrics.json
outputs/debug/: billing_zone_candidates.json  cctv_detection_results.json
outputs/events/: events.jsonl  (+3 more)
outputs_demo/: README.md
pipeline/: __init__.py  detect_video.py  event_generator.py  frame.py  layout_parser.py  session_manager.py  tracker.py  video_reader.py  video_worker.py  zone_event_generator.py  zone_mapper.py
scripts/: analyze_pos_candidates.py  analyze_tracking.py  create_sample_data.py  dump_drawing.py  extract_pos_gallery.py  extract_zone_gallery.py  inspect_drawings.py  inspect_layout.py  overlay_zones_with_image.py  parse_layout_xlsx.py  run_analytics.py  run_layout_parser.py  run_pos_analytics.py  run_zone_events.py  seed_db.py  test_cctv_detection.py  test_events.py  test_tracking.py  validate_environment.py  validate_events.py  validate_python_env.py  validate_submission.py  validate_zone_events.py  visualize_zones.py  xlsx_inspect.py
tests/: conftest.py
(+124 files in other folders)
